--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,31 @@
-<h1>Here is a list of users</h1>
+<%= stylesheet_link_tag 'application' %>
+
+<div class="container">
+  <div class="col-lg-6" id="head">
+    <img class="user-avatar" <%= @user.photo%> alt="user avatar" />
+    <div class="user-info">
+      <h2><%= @user.name %></h2>
+      <h3>Number of posts: <%= @user.posts_counter%></h3>
+    </div>
+  </div>
+  <div class="user_bio">
+    <h2>Bio</h2>
+    <p> <%= @user.bio %></p>
+  </div>
+</div>
+
+<%@user.recent_posts.each do |post| %>
+  <div class="user_post">
+    <h3>Post #<%= post.id %></h3>
+    <p> <%= post.text %></p>
+
+    <div class="comments_likes_counter">
+        <div class="comment_count">
+            <h3>Comments: <%= post.comments_counter%></h3>
+        </div>
+        <div class="like_count">
+            <h3>Likes: <%= post.likes_counter%></h3>
+        </div>
+  </div>
+<% end %>
+<button class="btn btn-primary btn-lg" id="submit" type="button">See all posts</button>
