Add forms to the app

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,6 +11,12 @@
       </div>
     </div>
   </div>
+
+  <%= link_to "Comment", new_user_post_comment_path(user_id: @post.author_id, post_id: @post.id) %>
+  <%= form_with model:@like, url: user_post_likes_path(post_id: @post.id) do |f| %>
+    <%= f.submit "Like" %>
+  <% end %>
+
   <div class="post_middle">
     <p><%= @post.text %></p>
   </div>
