--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,35 +2,40 @@
 
 <div class="container user_view">
   <div class="user_avatar">
-    <img src=<%= @user.photo %> alt="user avatar" height="16" width="16" />
+    <img src=<%= @user.photo%>>
   </div>
   <div class="user_info">
-    <h2><%= @user.name %></h2>
-    <p>Numbner of posts: <%= @user.posts_counter %></p>
+    <span class="user_name"><h2><%= @user.name %></h2></span>
+    <span class="user_posts_counter"><p>Number of posts: <%= @user.posts_counter %></p></span>
+    <span class="add_post">
+      <%= link_to "Add new post", user_posts_url(@user)%>
+    </span>
   </div>
 </div>
 
 <%@posts.each do |post|%>
-  <div class="post">
-    <div class="post_title">
-        <h3>Post #<%= post.id %></h3>
-    </div>
-    <div class="post_content">
-      <p><%= post.text %></p>
-    </div>
-    <div class="comments_likes_counter">
-      <div class="comment_count">
-        <h4>Comments: <%= post.comments_counter %></h4>
+  <%= link_to user_post_path(user_id: post.author_id, id: post.id) do%>
+    <div class="post">
+      <div class="post_title">
+          <h3>Post #<%= post.id %></h3>
       </div>
-      <div class="like_count">
-        <h4>Likes: <%= post.likes_counter %></h4>
+      <div class="post_content">
+        <p><%= post.text %></p>
       </div>
-  </div>
-  <div class="post_comments">
-    <%post.recent_comments.each do |comment| %>
-     <p> <%= @author.name %>: <%= comment.text %></p>
-    <% end %>
-  </div>
+      <div class="comments_likes_counter">
+        <div class="comment_count">
+          <h4>Comments: <%= post.comments_counter %></h4>
+        </div>
+        <div class="like_count">
+          <h4>Likes: <%= post.likes_counter %></h4>
+        </div>
+    </div>
+    <div class="post_comments">
+      <%post.recent_comments.each do |comment| %>
+      <p> <%= comment.author.name %>: <%= comment.text %></p>
+      <% end %>
+    </div>
+  <%end%>
 <% end %>
 
 <div class="pagination">
