--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag 'application' %>
 
-<div class="container">
+<div class="container user-header">
   <div class="col-lg-6" id="head">
     <img class="user-avatar" <%= @user.photo%> alt="user avatar" />
     <div class="user-info">
