--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,3 +1,7 @@
+<div class="h-16 w-full bg-midnight align-center justify-center mb-12">
+  <h1 class="text-3xl font-bold text-white text-center">Users</h1>
+</div>
+
 <div>
     <h1>Add new comment</h1>
 
