--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,7 @@
+<div class="h-16 w-full bg-midnight align-center justify-center mb-12">
+  <h1 class="text-3xl font-bold text-white text-center">Users</h1>
+</div>
+
 <div class="container" id="form-group">
     <h1>Add a new post</h1>
     <%= form_with model:@posts, url: user_posts_path do |form| %>
