--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,9 @@
 <%= stylesheet_link_tag 'application' %>
 
+<div class="h-16 w-full bg-midnight align-center justify-center mb-12">
+  <h1 class="text-3xl font-bold text-white text-center">Users</h1>
+</div>
+
 <div class="container user-header">
   <div class="col-lg-6" id="head">
     <img class="user-avatar" <%= @user.photo%> alt="user avatar" />
