--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,6 @@
-<h1>List of posts</h1>
+<div class="h-16 w-full bg-midnight align-center justify-center mb-12">
+  <h1 class="text-3xl font-bold text-white text-center">Users</h1>
+</div>
 
 <div class="container user_view">
   <div class="user_avatar">
