--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,7 @@
-<%# Posts showing %>
+<div class="h-16 w-full bg-midnight align-center justify-center mb-12">
+  <h1 class="text-3xl font-bold text-white text-center">Users</h1>
+</div>
+
 <div class="universal_post">
   <div class="post_top">
     <h2 class="title">Post</h2>
