--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,20 +1,30 @@
 <%= stylesheet_link_tag 'users' %>
 
-<div class="h-16 w-full bg-midnight justify-items-center md:justify-items-center mb-12">
-  <h1 class="md:text-3xl font-bold text-white text-center">Users</h1>
+<div class="flex space-x-2 h-auto w-full md:py-4 bg-midnight mb-12">
+  <div class="flex-1">
+    <h1 class="md:text-3xl font-bold text-white text-center">Users</h1>
+  </div>
 </div>
 
-<div class="container w-full-center h-full-center p-0">
+<div class="container w-full-center h-full-center md:p-2">
 <% @users.each do |user| %>
- <div class="container w-full md:p-2 h-48 mb-8 bg-white rounded md:rounded-lg">
+ <div class="container w-full md:p-2 h-auto mb-8 bg-white rounded md:rounded-lg">
   <%= link_to user_path(user) do%>
-    <div class="h-full w-full-center flex justify-between gap-4">
-      <div class="w-48 h-full-center bg-midnight hover:bg-blue align-center justify-center">
-        <img src=<%= user.photo%>>
+    <div class="h-auto-center w-full-center flex justify-between gap-4">
+      <div class="w-auto-center h-auto-center bg-grayLight hover:bg-gray align-center justify-items-center">
+        <img class="md:w-48 md:h-48" src=<%= user.photo %> alt="<%= user.name%> avatar"/>
       </div>
-      <div class="container w-full-center h-full-center bg-orange-600">
-        <div class="user_name"><h2><%= user.name %></h2></div>
-        <div class="user_posts_counter"><p>Number of posts: <%= user.posts_counter %></p></div>
+      <div class="container w-full-center h-auto-center flex justify-between p-0">
+        <div class="flex space-x-2 h-auto">
+          <div class="flex-1 md:my-auto">
+            <h2 class="md:text-2xl font-bold text-midnight text-center"><%= user.name %></h2>
+          </div>
+        </div>
+        <div class="flex sm:flex-col space-x-2 h-auto">
+          <div class="flex-1 md:w-52 md:mt-40 pr-8">
+            <p class="md:text-lg text-grayDark font-light">Number of posts: <%= user.posts_counter %></p>
+          </div>
+        </div>
       </div>
     </div>
 <% end %>
