--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -21,7 +21,7 @@
   <%= link_to user_post_path(user_id: post.author_id, id: post.id) do%>
     <div class="post">
       <div class="post_title">
-          <h3>Post #<%= post.id %></h3>
+          <h3><%= post.title %></h3>
       </div>
       <div class="post_content">
         <p><%= post.text %></p>
