--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag 'application' %>
 
-<div class="flex md:selection:space-x-2 h-auto w-full md:py-4 bg-midnight mb-12">
+<div class="flex md:selection:space-x-2 h-auto w-full md:py-4 bg-midnight mb-12 sticky top-0 z-50">
   <div class="flex-1">
     <h1 class="md:text-3xl font-bold text-white text-center"><%= @user.name%></h1>
   </div>
