--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,19 @@
 
   <body>
     <main class="container-fluid h-screen bg-primary">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-      <%= yield %>
+      <div class="app_title">
+       <h1>My Blog App</h1>
+     </div>
+      <div class="">
+          <% if user_signed_in? %>
+            <div>welcome <%= current_user.name %></div>
+            <%= button_to "Sign out", destroy_user_session_path, :method => :delete, class: "btn" %>
+          <% end %>
+        </div>
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
+    <%= yield %>
+      </div>
     </main>
   </body>
 </html>
